correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -76,12 +76,6 @@ body {
 
 
 @media screen and (max-width: 400px) {
-    html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
     .container {
         max-width: 100%;
         width: 100%;
